<?xml version="1.0" encoding="utf-8"?>
<TableLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">
        
        <Button
                android:text="@string/create_group"
                android:textSize="24sp"
                android:id="@+id/register_button"
                android:onClick="onAddGroupClicked"/>
        <Button
                android:text="@string/create_lecturer"
                android:textSize="24sp"
                android:id="@+id/register_lecturer"/>
        <Button
                android:text="@string/create_lecture_hall"
                android:textSize="24sp"
                android:id="@+id/register_lecture_hall"/>
        <Button
                android:text="@string/create_subject"
                android:textSize="24sp"
                android:id="@+id/register_subject"/>
        <Button
                android:text="@string/create_schedule"
                android:textSize="24sp"
                android:id="@+id/register_schedule"/>
</TableLayout>
